@@ -1,3 +1,9 @@
+2011-09-29  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* FileFormatToolbox/scinrrd_tiff2nrrd.m (v0.2.2):
+
+	- Add support for RGB images in LSM files.
+
 2011-09-23  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* PointsToolbox/pts_mesh.m (v0.2.0):
